Fix: Event titles not display properly if they wrap and event descriptions now display properly on mobile.

--- a/src/app/(site)/css/eventPageLayout.css
+++ b/src/app/(site)/css/eventPageLayout.css
@@ -159,4 +159,8 @@
     flex-direction: column;
     padding-bottom: 15px;
   }
+
+  .CurrentEventDescription{
+    max-width: 100%;
+  }
 }
